added hover functionality to menu cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
 <app-app-header [title]="title"></app-app-header>
+<div class="ui inverted vertical footer segment">
+    <div class="ui center aligned container">
+        Made with <i class="heart icon"></i> in Auburn, AL
+    </div>
+</div>
