--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,37 +1,24 @@
-<div class="ui piled segment">
-    <div class="ui two column centered grid">
-        <div class="column">
-            <div class="ui divided items">
-                <div class="item">
-                    <div class="image">
-                        <img src="assets/images/wcc-location.jpg">
-                    </div>
-                    <div class="content">
-                        <a class="header">{{ title }}</a>
-                        <div class="meta">
-                            <span class="cinema">Jihad Abassi, Owner</span>
-                        </div>
-                        <div class="description">
-                            <p>Formerly Toomer’s Coffee, the new name reflects
-                            the same commitment to quality of service you came
-                            to expect from Sandy & Trish Toomer!
-                            The new owner is an Auburn man through and through.
-                            He is well known in the food and beverage industry,
-                            and has been a popular fixture in the local Youth
-                            Soccer world as a coach and parent.
-                            <br><br>PS: YES, we will be serving Toomer’s Coffee
-                            Roasters fabulous coffee exclusively!
-                            <br><br>War Eagle!</p>
-                        </div>
-                        <div class="extra">
-                            <div class="ui button">
-                                <a href="https://goo.gl/maps/4R3zPaWj3gQ2"
-                                    target="_blank">Take Me There!</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<div class="ui segment">
+    <img class="ui centered large image" src="assets/images/wcc-location.jpg">
+  <div class="ui vertical stripe segment">
+    <div class="ui text container">
+      <h2 class="ui header">{{ title }}</h2>
+      <span class="cinema"><b>Jihad Abassi, Owner</b></span>
+        <p><br>Formerly Toomer’s Coffee, the new name reflects
+        the same commitment to quality of service you came
+        to expect from Sandy & Trish Toomer!
+        The new owner is an Auburn man through and through.
+        He is well known in the food and beverage industry,
+        and has been a popular fixture in the local Youth
+        Soccer world as a coach and parent.
+        <br><br>PS: YES, we will be serving Toomer’s Coffee
+        Roasters fabulous coffee exclusively!
+        <br><br>War Eagle!
+        </p>
+      <h4 class="ui horizontal header divider">
+        <a href="https://goo.gl/maps/4R3zPaWj3gQ2"
+          target="_blank">Take Me There!</a>
+      </h4>
     </div>
+  </div>
 </div>
