--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,10 +1,10 @@
-<div class="ui special cards">
+<div class="ui special cards" (click)="hoverDim()" >
   <div class="card">
-    <div class="blurring dimmable image">
+    <div class="blurring dimmable image" >
       <div class="ui dimmer">
         <div class="content">
           <div class="center">
-            <div class="ui inverted button">Add Friend</div>
+            <div class="ui inverted button inactive">Price: $2.50</div>
           </div>
         </div>
       </div>
@@ -13,174 +13,191 @@
     <div class="content">
       <a class="header">Cappuccino</a>
       <div class="meta">
-        <span class="date">Create in Sep 2014</span>
+        <span class="date">Variations</span>
       </div>
     </div>
     <div class="extra content">
-        <button class="positive ui button">Hot only!</button>
+        <div class="ui large buttons">
+            <button class="ui button">Hot</button>
+            <div class="or"></div>
+            <button class="ui button">Cold</button>
+          </div>
     </div>
   </div>
+
   <div class="card">
-    <div class="blurring dimmable image">
-      <div class="ui inverted dimmer">
-        <div class="content">
-          <div class="center">
-            <div class="ui primary button">Add Friend</div>
+      <div class="blurring dimmable image" >
+        <div class="ui dimmer">
+          <div class="content">
+            <div class="center">
+              <div class="ui inverted button inactive">Price: $2.50</div>
+            </div>
           </div>
         </div>
+        <img src="assets/images/logo.png">
       </div>
-      <img src="assets/images/logo.png">
-    </div>
-    <div class="content">
-      <a class="header">Macchiato</a>
-      <div class="meta">
-        <span class="date">Create in Aug 2014</span>
-      </div>
-    </div>
-    <div class="extra content">
-        <div class="ui buttons">
-          <button class="ui button">Hot</button>
-          <div class="or"></div>
-          <button class="ui positive button">Cold</button>
+      <div class="content">
+        <a class="header">Milk Mocha</a>
+        <div class="meta">
+          <span class="date">Variations</span>
         </div>
+      </div>
+      <div class="extra content">
+          <div class="ui large buttons">
+              <button class="ui button">Hot</button>
+              <div class="or"></div>
+              <button class="ui button">Cold</button>
+            </div>
+      </div>
     </div>
-  </div>
-  <div class="card">
-    <div class="blurring dimmable image">
-      <div class="ui dimmer">
+
+    <div class="card">
+        <div class="blurring dimmable image" >
+          <div class="ui dimmer">
+            <div class="content">
+              <div class="center">
+                <div class="ui inverted button inactive">Price: $2.50</div>
+              </div>
+            </div>
+          </div>
+          <img src="assets/images/logo.png">
+        </div>
         <div class="content">
-          <div class="center">
-            <div class="ui inverted button">Add Friend</div>
+          <a class="header">Dark Mocha</a>
+          <div class="meta">
+            <span class="date">Variations</span>
           </div>
         </div>
+        <div class="extra content">
+            <div class="ui large buttons">
+                <button class="ui button">Hot</button>
+                <div class="or"></div>
+                <button class="ui button">Cold</button>
+              </div>
+        </div>
       </div>
-      <img src="assets/images/logo.png">
-    </div>
-    <div class="content">
-      <a class="header">Latte</a>
-      <div class="meta">
-        <span class="date">Create in Sep 2014</span>
-      </div>
-    </div>
-    <div class="extra content">
-        <button class="positive ui button">Hot only!</button>
-    </div>
-  </div>
-  <div class="card">
-    <div class="blurring dimmable image">
-      <div class="ui inverted dimmer">
-        <div class="content">
-          <div class="center">
-            <div class="ui primary button">Add Friend</div>
+
+      <div class="card">
+          <div class="blurring dimmable image" >
+            <div class="ui dimmer">
+              <div class="content">
+                <div class="center">
+                  <div class="ui inverted button inactive">Price: $2.50</div>
+                </div>
+              </div>
+            </div>
+            <img src="assets/images/logo.png">
+          </div>
+          <div class="content">
+            <a class="header">Macchiato</a>
+            <div class="meta">
+              <span class="date">Variations</span>
+            </div>
+          </div>
+          <div class="extra content">
+              <div class="ui large buttons">
+                  <button class="ui button">One</button>
+                  <div class="or"></div>
+                  <button class="ui button">Two</button>
+                </div>
           </div>
         </div>
-      </div>
-      <img src="assets/images/logo.png">
-    </div>
-    <div class="content">
-      <a class="header">Americano</a>
-      <div class="meta">
-        <span class="date">Create in Aug 2014</span>
-      </div>
-    </div>
-    <div class="extra content">
-        <div class="ui buttons">
-          <button class="ui button">Hot</button>
-          <div class="or"></div>
-          <button class="ui positive button">Cold</button>
-        </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="blurring dimmable image">
-      <div class="ui dimmer">
-        <div class="content">
-          <div class="center">
-            <div class="ui inverted button">Add Friend</div>
+
+        <div class="card">
+            <div class="blurring dimmable image" >
+              <div class="ui dimmer">
+                <div class="content">
+                  <div class="center">
+                    <div class="ui inverted button inactive">Price: $2.50</div>
+                  </div>
+                </div>
+              </div>
+              <img src="assets/images/logo.png">
+            </div>
+            <div class="content">
+              <a class="header">Flat White</a>
+              <div class="meta">
+                <span class="date">Variations</span>
+              </div>
+            </div>
+            <div class="extra content">
+                <div class="ui large buttons">
+                    <button class="ui button">Hot</button>
+                    <div class="or"></div>
+                    <button class="ui button">Cold</button>
+                  </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <img src="assets/images/logo.png">
-    </div>
-    <div class="content">
-      <a class="header">Espresso</a>
-      <div class="meta">
-        <span class="date">Create in Sep 2014</span>
-      </div>
-    </div>
-    <div class="extra content">
-        <button class="positive ui button">Hot only!</button>
-    </div>
-  </div>
-  <div class="card">
-    <div class="blurring dimmable image">
-      <div class="ui inverted dimmer">
-        <div class="content">
-          <div class="center">
-            <div class="ui primary button">Add Friend</div>
-          </div>
-        </div>
-      </div>
-      <img src="assets/images/logo.png">
-    </div>
-    <div class="content">
-      <a class="header">Flat White</a>
-      <div class="meta">
-        <span class="date">Create in Aug 2014</span>
-      </div>
-    </div>
-    <div class="extra content">
-        <div class="ui buttons">
-          <button class="ui button">Hot</button>
-          <div class="or"></div>
-          <button class="ui positive button">Cold</button>
-        </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="blurring dimmable image">
-      <div class="ui dimmer">
-        <div class="content">
-          <div class="center">
-            <div class="ui inverted button">Add Friend</div>
-          </div>
-        </div>
-      </div>
-      <img src="assets/images/logo.png">
-    </div>
-    <div class="content">
-      <a class="header">Mocha</a>
-      <div class="meta">
-        <span class="date">Create in Sep 2014</span>
-      </div>
-    </div>
-    <div class="extra content">
-        <button class="positive ui button">Hot only!</button>
-    </div>
-  </div>
-  <div class="card">
-    <div class="blurring dimmable image">
-      <div class="ui inverted dimmer">
-        <div class="content">
-          <div class="center">
-            <div class="ui primary button">Add Friend</div>
-          </div>
-        </div>
-      </div>
-      <img src="assets/images/logo.png">
-    </div>
-    <div class="content">
-      <a class="header">Double Espresso</a>
-      <div class="meta">
-        <span class="date">Create in Aug 2014</span>
-      </div>
-    </div>
-    <div class="extra content">
-        <div class="ui buttons">
-          <button class="ui button">Hot</button>
-          <div class="or"></div>
-          <button class="ui positive button">Cold</button>
-        </div>
-    </div>
-  </div>
+
+          <div class="card">
+              <div class="blurring dimmable image" >
+                <div class="ui dimmer">
+                  <div class="content">
+                    <div class="center">
+                      <div class="ui inverted button inactive">Price: $2.50</div>
+                    </div>
+                  </div>
+                </div>
+                <img src="assets/images/logo.png">
+              </div>
+              <div class="content">
+                <a class="header">Espresso</a>
+                <div class="meta">
+                  <span class="date">Variations</span>
+                </div>
+              </div>
+              <div class="extra content">
+                  <button class="medium ui button">
+                      Hot only!
+                    </button>
+              </div>
+            </div>
+
+            <div class="card">
+                <div class="blurring dimmable image" >
+                  <div class="ui dimmer">
+                    <div class="content">
+                      <div class="center">
+                        <div class="ui inverted button inactive">Price: $2.50</div>
+                      </div>
+                    </div>
+                  </div>
+                  <img src="assets/images/logo.png">
+                </div>
+                <div class="content">
+                  <a class="header">Doppio</a>
+                  <div class="meta">
+                    <span class="date">Variations</span>
+                  </div>
+                </div>
+                <div class="extra content">
+                    <button class="large ui button">
+                        Cold only!
+                      </button>
+                </div>
+              </div>
+
+              <div class="card">
+                  <div class="blurring dimmable image" >
+                    <div class="ui dimmer">
+                      <div class="content">
+                        <div class="center">
+                          <div class="ui inverted button inactive">Price: $2.50</div>
+                        </div>
+                      </div>
+                    </div>
+                    <img src="assets/images/logo.png">
+                  </div>
+                  <div class="content">
+                    <a class="header">White Chocolate Mocha</a>
+                    <div class="meta">
+                      <span class="date">Variations</span>
+                    </div>
+                  </div>
+                  <div class="extra content">
+                      <button class="large ui button">
+                          Hot only!
+                        </button>
+                  </div>
+                </div>
 </div>
