added sidebar menu for mobile viewport

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,7 +11,7 @@
         He is well known in the food and beverage industry,
         and has been a popular fixture in the local Youth
         Soccer world as a coach and parent.
-        <br><br>PS: YES, we will be serving Toomer’s Coffee
+        <br><br>PS: Yes, we will be serving Toomer’s Coffee
         Roasters fabulous coffee exclusively!
         <br><br>War Eagle!
         </p>
