--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -201,3 +201,13 @@
                   </div>
                 </div>
 </div>
+
+<!--
+<div class="ui visible right sidebar">
+  <div class="ui raised segment">
+    <p>
+      PLACEHOLDER FOR THE COFFEE BASKET
+      </p>
+  </div>
+</div>
+-->
