--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -1,16 +1,53 @@
-<div class="ui fixed stackable inverted menu">
-    <a href="/" class="header item">
-        <img class="logo" src="assets/images/logo.png">
-            {{ title }}
-    </a>
-    <a routerLink="/about" class="item">About</a>
-    <a routerLink="/dashboard" class="item">Dashboard</a>
-    <a routerLink="/menu" class="item">Menu</a>
-    <a routerLink="/order" class="item">Order</a>
-    <div class="right menu">
+<!-- Fixed menu while scrolling -->
+<div class="ui large top fixed hidden menu">
+    <div class="ui container">
+        <a routerLink="/dashboard" class="item">Home</a>
+        <a routerLink="/about" class="item">About</a>
+        <a routerLink="/menu" class="item">Menu</a>
+        <a routerLink="/order" class="item">Order</a>
+      <div class="right menu">
         <div class="item">
-            <a routerLink="/login" class="ui primary button">Log In</a>
+          <a routerLink="/login" class="ui button">Log in</a>
         </div>
+      </div>
     </div>
 </div>
+  
+  <!-- Sidebar Menu -->
+  <div class="ui vertical inverted sidebar menu">
+        <a href="/" class="header item">
+            <img class="logo" src="assets/images/favicon.ico">
+                {{ title }}
+        </a>
+        <a routerLink="/dashboard" class="item">Home</a>
+        <a routerLink="/about" class="item">About</a>
+        <a routerLink="/menu" class="item">Menu</a>
+        <a routerLink="/order" class="item">Order</a>
+        <a routerLink="/login"class="item">Login</a>
+  </div>
+  
+  
+  <!-- Page Contents -->
+  <div class="pusher">
+    <div class="ui inverted vertical masthead center aligned segment" (click)="hideAway()">
+      <div class="ui container">
+        <div class="ui medium secondary inverted pointing menu">
+          <a class="toc item">
+            <i class="sidebar icon"></i>
+          </a>
+          <a href="/" class="header item">
+            <img class="logo" src="assets/images/logo.png">
+                {{ title }}
+          </a>
+          <a routerLink="/dashboard" class="item">Home</a>
+          <a routerLink="/about" class="item">About</a>
+          <a routerLink="/menu" class="item">Menu</a>
+          <a routerLink="/order" class="item">Order</a>
+          <div class="right item">
+            <a routerLink="/login" class="ui inverted button">Log in</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 <router-outlet></router-outlet>
