--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <div class="ui inverted vertical footer segment">
     <div class="ui center aligned container">
         Made with <i class="heart icon"></i> in Auburn, AL
+        <p>The <i class="coffee icon"></i> is too :)</p>
     </div>
 </div>
