--- a/src/app/app-header/app-header.component.css
+++ b/src/app/app-header/app-header.component.css
@@ -64,7 +64,7 @@
   @media only screen and (max-width: 700px) {
     .secondary.pointing.menu .item,
     .secondary.pointing.menu .menu {
-      padding-top: 0px;
+      display: none;
     }
     .secondary.pointing.menu .toc.item {
       display: block;
