--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -28,26 +28,25 @@
   
   
   <!-- Page Contents -->
-  <div class="pusher">
-    <div class="ui inverted vertical masthead center aligned segment" (click)="hideAway()">
-      <div class="ui container">
-        <div class="ui medium secondary inverted pointing menu">
-          <a class="toc item">
-            <i class="sidebar icon"></i>
-          </a>
-          <a href="/" class="header item">
-            <img class="logo" src="assets/images/logo.png">
-                {{ title }}
-          </a>
-          <a routerLink="/dashboard" class="item">Home</a>
-          <a routerLink="/about" class="item">About</a>
-          <a routerLink="/menu" class="item">Menu</a>
-          <a routerLink="/order" class="item">Order</a>
-          <div class="right item">
-            <a routerLink="/login" class="ui inverted button">Log in</a>
-          </div>
+<div class="pusher">
+  <div class="ui inverted horizontal masthead center aligned segment" (click)="hideAway()">
+    <div class="ui container">
+      <div class="ui small secondary inverted pointing menu">
+        <a class="toc item">
+          <i class="sidebar icon"></i>
+        </a>
+        <a href="/" class="header item">
+          {{ title }}
+        </a>
+        <a routerLink="/dashboard" class="item">Home</a>
+        <a routerLink="/about" class="item">About</a>
+        <a routerLink="/menu" class="item">Menu</a>
+        <a routerLink="/order" class="item">Order</a>
+        <div class="right item">
+          <a routerLink="/login" class="ui inverted button">Log in</a>
         </div>
       </div>
     </div>
   </div>
+</div>
 <router-outlet></router-outlet>
