dashboard and ui updates

--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -4,7 +4,7 @@
         <a routerLink="/dashboard" class="item">Home</a>
         <a routerLink="/about" class="item">About</a>
         <a routerLink="/menu" class="item">Menu</a>
-        <a routerLink="/order" class="item">Order</a>
+        <!-- <a routerLink="/order" class="item">Order</a> -->
       <div class="right menu">
         <div class="item">
           <a routerLink="/login" class="ui button">Log in</a>
@@ -22,7 +22,7 @@
         <a routerLink="/dashboard" class="item">Home</a>
         <a routerLink="/about" class="item">About</a>
         <a routerLink="/menu" class="item">Menu</a>
-        <a routerLink="/order" class="item">Order</a>
+        <!-- <a routerLink="/order" class="item">Order</a> -->
         <a routerLink="/login"class="item">Login</a>
   </div>
   
@@ -41,7 +41,7 @@
         <a routerLink="/dashboard" class="item">Home</a>
         <a routerLink="/about" class="item">About</a>
         <a routerLink="/menu" class="item">Menu</a>
-        <a routerLink="/order" class="item">Order</a>
+        <!-- <a routerLink="/order" class="item">Order</a> -->
         <div class="right item">
           <a routerLink="/login" class="ui inverted button">Log in</a>
         </div>
