--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-app-header [title]="title"></app-app-header>
-<div class="ui inverted vertical footer segment">
+<!-- <div class="ui inverted vertical footer segment">
     <div class="ui center aligned container">
         Made with <i class="heart icon"></i> in Auburn, AL
         <p>The <i class="coffee icon"></i> is too :)</p>
     </div>
-</div>
+</div> -->
