removed orderComp and two-way bound products

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,213 +1,20 @@
 <div class="ui special cards" (click)="hoverDim()" >
-  <div class="card">
-    <div class="blurring dimmable image" >
-      <div class="ui dimmer">
-        <div class="content">
-          <div class="center">
-            <div class="ui inverted button inactive">Price: $2.50</div>
-          </div>
-        </div>
-      </div>
-      <img src="assets/images/logo.png">
-    </div>
-    <div class="content">
-      <a class="header">Cappuccino</a>
-      <div class="meta">
-        <span class="date">Variations</span>
-      </div>
-    </div>
-    <div class="extra content">
-        <div class="ui large buttons">
-            <button class="ui button">Hot</button>
-            <div class="or"></div>
-            <button class="ui button">Cold</button>
-          </div>
-    </div>
-  </div>
-
-  <div class="card">
+  <span class="text" *ngIf="productList === undefined">Loading...</span>
+  
+  <div class="card" *ngFor="let product of productList">
       <div class="blurring dimmable image" >
-        <div class="ui dimmer">
-          <div class="content">
-            <div class="center">
-              <div class="ui inverted button inactive">Price: $2.50</div>
-            </div>
-          </div>
-        </div>
-        <img src="assets/images/logo.png">
-      </div>
-      <div class="content">
-        <a class="header">Milk Mocha</a>
-        <div class="meta">
-          <span class="date">Variations</span>
-        </div>
-      </div>
-      <div class="extra content">
-          <div class="ui large buttons">
-              <button class="ui button">Hot</button>
-              <div class="or"></div>
-              <button class="ui button">Cold</button>
-            </div>
-      </div>
-    </div>
-
-    <div class="card">
-        <div class="blurring dimmable image" >
           <div class="ui dimmer">
-            <div class="content">
-              <div class="center">
-                <div class="ui inverted button inactive">Price: $2.50</div>
+              <div class="content">
+                  <div class="center">
+                      <div class="ui inverted button inactive" (click)="buyProduct(product)">Price: ${{ product.price / 100.0 | number }}</div>
+                  </div>
               </div>
-            </div>
           </div>
           <img src="assets/images/logo.png">
-        </div>
-        <div class="content">
-          <a class="header">Dark Mocha</a>
-          <div class="meta">
-            <span class="date">Variations</span>
-          </div>
-        </div>
-        <div class="extra content">
-            <div class="ui large buttons">
-                <button class="ui button">Hot</button>
-                <div class="or"></div>
-                <button class="ui button">Cold</button>
-              </div>
-        </div>
       </div>
-
-      <div class="card">
-          <div class="blurring dimmable image" >
-            <div class="ui dimmer">
-              <div class="content">
-                <div class="center">
-                  <div class="ui inverted button inactive">Price: $2.50</div>
-                </div>
-              </div>
-            </div>
-            <img src="assets/images/logo.png">
-          </div>
-          <div class="content">
-            <a class="header">Macchiato</a>
-            <div class="meta">
-              <span class="date">Variations</span>
-            </div>
-          </div>
-          <div class="extra content">
-              <div class="ui large buttons">
-                  <button class="ui button">One</button>
-                  <div class="or"></div>
-                  <button class="ui button">Two</button>
-                </div>
-          </div>
-        </div>
-
-        <div class="card">
-            <div class="blurring dimmable image" >
-              <div class="ui dimmer">
-                <div class="content">
-                  <div class="center">
-                    <div class="ui inverted button inactive">Price: $2.50</div>
-                  </div>
-                </div>
-              </div>
-              <img src="assets/images/logo.png">
-            </div>
-            <div class="content">
-              <a class="header">Flat White</a>
-              <div class="meta">
-                <span class="date">Variations</span>
-              </div>
-            </div>
-            <div class="extra content">
-                <div class="ui large buttons">
-                    <button class="ui button">Hot</button>
-                    <div class="or"></div>
-                    <button class="ui button">Cold</button>
-                  </div>
-            </div>
-          </div>
-
-          <div class="card">
-              <div class="blurring dimmable image" >
-                <div class="ui dimmer">
-                  <div class="content">
-                    <div class="center">
-                      <div class="ui inverted button inactive">Price: $2.50</div>
-                    </div>
-                  </div>
-                </div>
-                <img src="assets/images/logo.png">
-              </div>
-              <div class="content">
-                <a class="header">Espresso</a>
-                <div class="meta">
-                  <span class="date">Variations</span>
-                </div>
-              </div>
-              <div class="extra content">
-                  <button class="medium ui button">
-                      Hot only!
-                    </button>
-              </div>
-            </div>
-
-            <div class="card">
-                <div class="blurring dimmable image" >
-                  <div class="ui dimmer">
-                    <div class="content">
-                      <div class="center">
-                        <div class="ui inverted button inactive">Price: $2.50</div>
-                      </div>
-                    </div>
-                  </div>
-                  <img src="assets/images/logo.png">
-                </div>
-                <div class="content">
-                  <a class="header">Doppio</a>
-                  <div class="meta">
-                    <span class="date">Variations</span>
-                  </div>
-                </div>
-                <div class="extra content">
-                    <button class="large ui button">
-                        Cold only!
-                      </button>
-                </div>
-              </div>
-
-              <div class="card">
-                  <div class="blurring dimmable image" >
-                    <div class="ui dimmer">
-                      <div class="content">
-                        <div class="center">
-                          <div class="ui inverted button inactive">Price: $2.50</div>
-                        </div>
-                      </div>
-                    </div>
-                    <img src="assets/images/logo.png">
-                  </div>
-                  <div class="content">
-                    <a class="header">White Chocolate Mocha</a>
-                    <div class="meta">
-                      <span class="date">Variations</span>
-                    </div>
-                  </div>
-                  <div class="extra content">
-                      <button class="large ui button">
-                          Hot only!
-                        </button>
-                  </div>
-                </div>
-</div>
-
-<!--
-<div class="ui visible right sidebar">
-  <div class="ui raised segment">
-    <p>
-      PLACEHOLDER FOR THE COFFEE BASKET
-      </p>
+      <div class="content">
+          <a class="ui header">{{ product.name }}</a>
+      </div>
   </div>
+  
 </div>
--->
