--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -4,7 +4,6 @@
         <a routerLink="/dashboard" class="item">Home</a>
         <a routerLink="/about" class="item">About</a>
         <a routerLink="/menu" class="item">Menu</a>
-        <!-- <a routerLink="/order" class="item">Order</a> -->
       <div class="right menu">
         <div class="item">
           <a routerLink="/login" class="ui button">Log in</a>
@@ -22,14 +21,13 @@
         <a routerLink="/dashboard" class="item">Home</a>
         <a routerLink="/about" class="item">About</a>
         <a routerLink="/menu" class="item">Menu</a>
-        <!-- <a routerLink="/order" class="item">Order</a> -->
         <a routerLink="/login"class="item">Login</a>
   </div>
   
   
   <!-- Page Contents -->
 <div class="pusher">
-  <div class="ui inverted horizontal masthead center aligned segment" (click)="hideAway()">
+  <div class="ui inverted vertical masthead center aligned segment" (click)="hideAway()">
     <div class="ui container">
       <div class="ui small secondary inverted pointing menu">
         <a class="toc item">
@@ -41,7 +39,6 @@
         <a routerLink="/dashboard" class="item">Home</a>
         <a routerLink="/about" class="item">About</a>
         <a routerLink="/menu" class="item">Menu</a>
-        <!-- <a routerLink="/order" class="item">Order</a> -->
         <div class="right item">
           <a routerLink="/login" class="ui inverted button">Log in</a>
         </div>
