readjusted card sizes on mobile viewport and header fix

--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -32,6 +32,7 @@
       <div class="ui small secondary inverted pointing menu">
         <a class="toc item">
           <i class="sidebar icon"></i>
+          {{ title }}
         </a>
         <a href="/" class="header item">
           {{ title }}
