removed angle button due to discrepancy issues

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,14 +1,12 @@
 <div class="pushable">
     <img class="ui large image" src="assets/images/wcc-logo.jpg">
     <div class="pusher">
+        <h4 class="ui horizontal header divider" style="padding-top: 5%;">
+            <a routerLink="/menu" target="_blank">Sign Up and Order Now!</a>
+        </h4>
         <div class="ui vertical stripe segment">
             <div class="ui middle aligned stackable grid container">
                 <div class="row">
-                    <div class="center aligned column" style="margin-top: -15%; width: 100%;">
-                        <a class="ui secondary button" href="/dashboard/#jumphere"><i class="angle double down icon"></i></a>
-                    </div>
-                </div>
-                <div id="jumphere" class="row">
                     <div class="eight wide column">
                         
                         <h3 class="ui header">Light, Medium, and Dark Roasts From All Around The Globe!</h3>
