minor button color change

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -16,7 +16,7 @@
         <br><br>War Eagle!
         </p>
       <h4 class="ui horizontal header divider">
-        <a href="https://goo.gl/maps/4R3zPaWj3gQ2"
+        <a class= "ui blue button" href="https://goo.gl/maps/4R3zPaWj3gQ2"
           target="_blank">Take Me There!</a>
       </h4>
     </div>
