--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -13,7 +13,7 @@
           <img src="assets/images/logo.png">
       </div>
       <div class="content">
-          <a class="ui header">{{ product.name }}</a>
+          <a class="ui header" style="text-align: center;">{{ product.name }}</a>
       </div>
   </div>
   
