changed theme to auburn blue

--- a/src/app/user/app-header/app-header.component.css
+++ b/src/app/user/app-header/app-header.component.css
@@ -13,6 +13,10 @@
   width: 100%;
 }
 
+.ui.left.sidebar, .ui.right.sidebar {
+  background: rgb(3, 36, 77);
+}
+
 .hidden.menu {
     display: none;
   }
