--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,37 +1,28 @@
 <div class="ui centered attached message">
-  <div class="header">
-    Welcome to our site!
+  <div class="header" style="text-align: center;">
+    <h1>Welcome</h1>
+    <h3>to World Cup Coffee Company!</h3>
   </div>
-  <p>Fill out the form below to sign-up for a new account</p>
-</div>
-<form class="ui form attached fluid segment">
-  <div class="two fields">
-    <div class="field">
-      <label>First Name</label>
-      <input placeholder="First Name" type="text">
-    </div>
-    <div class="field">
-      <label>Last Name</label>
-      <input placeholder="Last Name" type="text">
-    </div>
-  </div>
-  <div class="field">
-    <label>Username</label>
-    <input placeholder="Username" type="text">
-  </div>
-  <div class="field">
-    <label>Password</label>
-    <input type="password">
-  </div>
-  <div class="inline field">
-    <div class="ui checkbox">
-      <input type="checkbox" id="terms">
-      <label for="terms">Remember Me!</label>
+  <div class="ui centered special cards">
+    <div class="card">
+      <form class="ui centered form attached segment">
+        <div class="field">
+          <label>Username</label>
+          <input placeholder="Username" type="text">
+        </div>
+        <div class="field">
+          <label>Password</label>
+          <input placeholder="Password" type="password">
+        </div>
+        <div class="inline field">
+          <div class="ui checkbox">
+            <input type="checkbox" id="terms">
+            <label for="terms">Remember Me!</label>
+          </div>
+        </div>
+        <div class="ui blue submit button">Submit</div>
+        <div class="ui submit button">Signup Here!</div>
+      </form>
     </div>
   </div>
-  <div class="ui blue submit button">Submit</div>
-</form>
-<div class="ui bottom attached warning message">
-  <i class="icon help"></i>
-  Already signed up? <a routerLink="/login">Login here</a> instead.
 </div>
