login page ui changes

--- a/src/app/user/dashboard/dashboard.component.html
+++ b/src/app/user/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="row">
                     <div class="center aligned column">
-                        <a routerLink="/user/menu" class="ui huge blue button">Have A Look At Our Menu!</a>
+                        <a routerLink="/user/menu" class="ui small blue button">Take A Look At Our Menu!</a>
                     </div>
                 </div>
             </div>
