--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="ui blue submit button">Submit</div>
-        <div class="ui submit button">Signup Here!</div>
+        <div class="ui submit button">Signup</div>
       </form>
     </div>
   </div>
