added checkout component to user

--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -20,7 +20,7 @@
             <label for="terms">Remember Me!</label>
           </div>
         </div>
-        <div class="ui blue submit button">Submit</div>
+        <div class="ui blue submit button">Login</div>
         <div class="ui submit button">Signup</div>
       </form>
     </div>
