added order services

--- a/src/app/user/checkout/checkout.component.html
+++ b/src/app/user/checkout/checkout.component.html
@@ -41,6 +41,7 @@
             </div>
           </div>
         </div>
+        <p *ngIf="checkoutError == true">Error in submitting order. Please check your form and submit again.</p>
       </form>
     </div>
   </div>
