--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -8,11 +8,11 @@
       <form class="ui centered form attached segment">
         <div class="field">
           <label>Username</label>
-          <input placeholder="Username" type="text">
+          <input placeholder="Username" type="text" name="username" [(ngModel)]="username">
         </div>
         <div class="field">
           <label>Password</label>
-          <input placeholder="Password" type="password">
+          <input placeholder="Password" type="password" name="password" [(ngModel)]="password">
         </div>
         <div class="inline field">
           <div class="ui checkbox">
@@ -22,7 +22,9 @@
         </div>
         <div class="ui three centered column grid">
           <div class="row">
-              <div class="ui blue submit button">Login</div>
+              <div class="ui blue submit button" (click)="postLogin(username, password)">
+                Login
+              </div>
           </div>
           <div class="row">
               <div class="ui blue submit button" (click)="login()"><i class="facebook square icon"></i>Facebook</div>
