--- a/src/app/user/menu/menu.component.html
+++ b/src/app/user/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="ui special cards" (click)="hoverDim()" >
+<div class="ui special cards grid">
   <span class="text" *ngIf="productList === undefined">Loading...</span>
   
   <div class="card" *ngFor="let product of productList">
